--- a/config/profile.yml
+++ b/config/profile.yml
@@ -14,28 +14,28 @@ USER:
 
 INFO:
   - label: "Email"
-    value: "richard@example.com"
+    value: "nbhandar@cshl.edu"
     icon: "mail-outline"
-  - label: "Phone"
-    value: "+1 (213) 352-2795"
-    icon: "phone-portrait-outline"
-  - label: "Birthday"
-    value: "June 26, 1996"
-    icon: "calendar-outline"
+#  - label: "Phone"
+#    value: "+1 (213) 352-2795"
+#    icon: "phone-portrait-outline"
+#  - label: "Birthday"
+#    value: "June 26, 1996"
+#    icon: "calendar-outline"
   - label: "Location"
-    value: "Sacramento, California, USA"
+    value: "New York, NY, USA"
     icon: "location-outline"
 
 SOCIAL:
-  - icon: "logo-facebook"
-    url: "https://facebook.com/"
+#  - icon: "logo-facebook"
+#    url: "https://facebook.com/"
   - icon: "logo-twitter"
-    url: "https://twitter.com/"
-  - icon: "logo-instagram"
-    url: "https://instagram.com/"
+    url: "https://x.com/"
+#  - icon: "logo-instagram"
+#    url: "https://instagram.com/"
   - icon: "logo-linkedin"
     url: "https://www.linkedin.com/"
   - icon: "logo-github"
-    url: "https://github.com/ivansaul"
-  - icon: "logo-dribbble"
-    url: "https://dribbble.com/"
+    url: "https://github.com/nishcomp"
+#  - icon: "logo-dribbble"
+#    url: "https://dribbble.com/"
