--- a/config/profile.yml
+++ b/config/profile.yml
@@ -10,7 +10,7 @@ USER:
   role: "Computational Biologist"
   name: "Nischal Bhandari"
   username: "nishcomp" # <-- This needs to be the same as your GitHub username
-  avatar: "config/assets/avatars/my-avatar.png"
+  avatar: "config/assets/icons/user.svg"   # avatars/my-avatar.png
 
 INFO:
   - label: "Email"
