--- a/config/about.yml
+++ b/config/about.yml
@@ -31,7 +31,7 @@ CURRENT:
   label: "📍 Current Position"
   items:
     - title: "Computational Biologist"
-      icon: "config/assets/icons/ai.svg"
+      icon: "config/assets/icons/cshl_logo_alternate_RGB.eps"
       description: "Westcott Laboratory, Cold Spring Harbor Laboratory"
 
 TECHNOLOGIES:
