--- a/config/projects.yml
+++ b/config/projects.yml
@@ -6,3 +6,8 @@ PROJECTS:
     category: ["Bioinformatics", "R", "Package"]
     image: "https://github.com/nishcomp/STING/blob/main/images/p1_crc_CXCR4_hotspot_neighbors.png?raw=true"
     url: "https://github.com/nishcomp/STING"
+
+  - title: "Where Are We Going? Tracing the Ever-Evolving Tale of Human Migration"
+    category: ["Python", "Data Analysis"]
+    image: "https://1nishbh.github.io/Migration-Our-Story-as-a-Mobile-Species/villagers_migrating_bangladesh.jpg"
+    url: "https://1nishbh.github.io/Migration-Our-Story-as-a-Mobile-Species/blog.html"
