pages styles update

--- a/config/navbar.yml
+++ b/config/navbar.yml
@@ -1,6 +1,7 @@
 NAVBAR:
   - label: "About"
   - label: "Publications"
+  - label: "Talks"
   - label: "Portfolio"
   - label: "CV"
 #  - label: "Blog"
