--- a/config/resume.yml
+++ b/config/resume.yml
@@ -6,11 +6,30 @@ EDUCATION:
   enabled: true
   label: "Education"
   items: []
+  items:
+    - institution: "Ramapo College of New Jersey, Mahwah, NJ"
+      period: "2020 - 2024"
+      degree: "B.S. in Bioinformatics and Data Science"
+      description: "Capstone Project: Investigating the Role of Relative Usage of Synonymous Codons in Breast Cancer Metastasis: tRNA and miRNA perspective"
 
 EXPERIENCE:
   enabled: true
   label: "Research Experience"
   items: []
+  items:   
+    - position: "Research Assistant, Molecular Biology Lab"
+      period: "Aug 2022 – May 2023"
+      organization: "Ramapo College of New Jersey"
+      location: "Mahwah, NJ"
+
+    - position: "Bioinformatics Intern, Computational Biology Lab"
+      period: "Jun – Aug 2023"
+      organization: "New York Genome Center, Manhattan, NY"
+      location: "New York, NY"
+    - position: "Computational Biologist, Westcott Lab"
+      period: "Jun 2024 – Present"
+      organization: "Cold Spring Harbor Laboratory, NY"
+      location: "Cold Spring Harbor, NY"
 
 LANGUAGES:
   enabled: false
