--- a/config/publications.yml
+++ b/config/publications.yml
@@ -2,10 +2,10 @@ HEADER:
   label: "Publications"
 
 PUBLICATIONS:
-  - title: "Sample Publication 1"
-    category: ["Cancer Genomics", "Single-cell Analysis", "Spatial Transcriptomics"]
+  - title: "Targeting Neutrophil Extracellular Traps to inhibit Colon Cancer Tumor Necrosis and Metastasis"
+    category: ["Pre-prin", "Cancer Genomics", "Spatial Transcriptomics"]
     image: "https://media.gettyimages.com/id/1701193275/photo/cancer-malignant-cells.jpg?s=2048x2048&w=gi&k=20&c=RsbSGy5WBeS-uYWvb1RSkCnQjMdMOS4DeKHVA81hTdQ="
-    url: "https://scholar.google.com/"
-    authors: "Bhandari, N., et al."
-    journal: "ABC"
+    url: "https://www.biorxiv.org/content/10.1101/2025.05.30.657122v2.abstract"
+    authors: "E Gazzara, et al."
+    journal: "TBD"
     year: "2024"
