--- a/config/profile.yml
+++ b/config/profile.yml
@@ -8,7 +8,7 @@ HEADER:
 
 USER:
   name: "Nischal Bhandari"
-  username: "nishcomp"
+  username: "nischallllll"
   avatar: "config/assets/icons/user.svg"
   role: "Cancer | Genetics | Immunology | Computational Biology"
 
@@ -34,8 +34,8 @@ SOCIAL:
 #  - icon: "logo-instagram"
 #    url: "https://instagram.com/"
   - icon: "logo-linkedin"
-    url: "https://www.linkedin.com/"
+    url: "https://www.linkedin.com/in/nischalbh"
   - icon: "logo-github"
-    url: "https://github.com/nishcomp"
+    url: "https://github.com/nischallllll"
 #  - icon: "logo-dribbble"
 #    url: "https://dribbble.com/"
