--- a/config/profile.yml
+++ b/config/profile.yml
@@ -34,7 +34,7 @@ SOCIAL:
 #  - icon: "logo-instagram"
 #    url: "https://instagram.com/"
   - icon: "logo-linkedin"
-    url: "https://www.linkedin.com/in/nischalbh"
+    url: "https://www.linkedin.com/in/nishbh"
   - icon: "logo-github"
     url: "https://github.com/nischallllll"
 #  - icon: "logo-dribbble"
